feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#87)
* feat: Upgrade to Spring Boot 3.3.13 by org.openrewrite.maven:rewrite-maven-plugin (recipe: org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_3).

* fix(deps): Bump openapi-generator-maven-plugin to 7.9.0, maven-compiler-plugin to 3.15.0. openapi-generator-maven-plugin configuration is optimized, properties for Spring Boot 3.3 are added.

* fix: HttpUtils#createTrustAllHttpClientBuilder method is rewritten according to modern Spring Boot API. SpringLiquibaseConfig: obsolete method is removed.

* fix(deps): Bump au.com.dius.pact.consumer:junit5 dependency version to 4.6.15.

* fix: Pact-tests (consumer-side) are fixed. Extra assertions are added.

* fix: Bump logback to 1.5.18, slf4j to 2.0.17. Maven-surefire-plugin configuration is added: mockito-core javaagent is set for tests.

* fix(deps): Bump dependencies to avoid conflicts: httpclient5 to 5.4.4, httpcore5 to 5.3.4, spring-kafka and spring-kafka-test to 3.3.3, gson to 2.10.1, org.glassfish:jakarta.el to 4.0.2, junit-jupiter to 5.10.5, org.hamcrest:hamcrest to 2.2; tomcat-embed- dependencies are removed.

* fix(deps): Bump dependencies: jackson to 2.18.6, org.openapitools:jackson-databind-nullable to 0.2.6, org.apache.logging.log4j:log4j-api to 2.23.1.

* fix: StatisticsServiceImpl: Incorrect casting to BigInteger is removed for queries returning count of rows. TestDataServiceTest#testDataTable_getTableWithWrongFilterType_throwsException: assertion of exception message is fixed.

* fix(deps): Bump undertow version to 2.3.21.Final, httpclient to 4.5.14, commons-collections4 to 4.2. Also: dev-mvn-docker-build.yaml#run-tests step: conditions are changed.

* fix(deps): Bump liquibase to 4.23.2, kotlin to 1.9.25. Add direct dependency com.github.jsqlparser:jsqlparser:4.9 and rewrite SqlTestDataCleaner#parseQuery method. Important change: parseQuery() throws SecurityException also on queries containing EXEC substring.

* fix(security): Bu